NOCC 1.4    ?? ??, 200?

  Bugs
    * Bug #1629751 : Deleting mails reports "Could not connect to server" 
      (Arnaud Boudou).

  Patches
    * Patch #1648561 : Remove needless CSS classes (Tim Gerundt).
    * Patch #1648196 : Use <label> for login box (Tim Gerundt).
    * Patch #1639027 : RSS: Add nocc_login as parameter (Tim Gerundt).
    * Patch #1639021 : RSS: Fix array_shift warning (Tim Gerundt).
    * Patch #1632779 : Fix Invalid HTML in html/prefs.php (Tim Gerundt).
    * Patch #1630921 : Optimize login box (Tim Gerundt).
    * Patch #1627141 : CS translation for 1.3 version (Ragimiri).

  RFE

  Misc
    * Disable unread icon for POP3 mailboxes (Arnaud Boudou).
    * Some small CSS changes (Arnaud Boudou).

NOCC 1.3    January 01, 2007

  Bugs
    * Bug #1611537 : Confusing for-loops in functions.php:GetPart() (Arnaud
      Boudou).
    * Bug #1598813 : file "prefs_error.php" seems unneeded (Arnaud Boudou).
    * Bug #1581966 : Bold tag instead of strong tag in pt-br.php (Arnaud
      Boudou).
    * Bug #1579997 : Download mail, illegal characters in filename on save
      (Arnaud Boudou).
    * Bug #1578946 : Image tags of smiley's not XHTML 1.1 (Arnaud Boudou).
    * Bug #1578017 : down_mail.php don't work with IE (Arnaud Boudou).
    * Bug #1576418 : imap_open(): Couldn't open stream in down_mail.php (Arnaud
      Boudou).
    * Bug #1566972 : Needless if statement in "html_top_table.php"? (Arnaud
      Boudou).
    * Bug #1565973 : More mixed EOL in some files (Arnaud Boudou).
    * Bug #1565100 : Mixed EOL in html/send.php (Arnaud Boudou).
    * Bug #1565082 : Logout.php use empty theme (Arnaud Boudou).
    * Bug #1555543 : Some small spelling errors in en.php (Arnaud Boudou).
    * Bug #1552568 : Setting wrap None is not shown as selected (Arnaud Boudou).
    * Bug #1551529 : $html_to occurs twice in language files (Arnaud Boudou).
    * Bug #1550843 : Move and Copy buttons of top row in Inbox don't work
      (Arnaud Boudou).