@@ -1,4 +1,4 @@
-<!-- start of $Id: footer.php,v 1.17 2006/02/26 09:32:53 goddess_skuld Exp $ -->
+<!-- start of $Id: footer.php,v 1.18 2006/11/22 14:27:17 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -9,15 +9,14 @@ if(file_exists($custom_footer)) {
 }
 else {
 ?>
-          <div class="footer">
-              <a href="javascript:void(0);" onclick="window.open('http://nocc.sourceforge.net');">
+        <div class="footer">
+            <a href="javascript:void(0);" onclick="window.open('http://nocc.sourceforge.net');">
                 <img src="themes/<?php echo str_replace('..','',convertLang2Html($_SESSION['nocc_theme'])) ?>/img/button.png" class="footerLogo" alt="Powered by NOCC" />
-              </a>
-          </div>
+            </a>
         </div>
     </body>
 </html>
 <?php
 }
 ?>
-<!-- end of $Id: footer.php,v 1.17 2006/02/26 09:32:53 goddess_skuld Exp $ -->
+<!-- end of $Id: footer.php,v 1.18 2006/11/22 14:27:17 goddess_skuld Exp $ -->
