@@ -292,10 +292,6 @@ table {
   border-spacing: 0px;
 }
 
-div.global {
-  width: 100%;
-}
-
 div.header {
   padding-bottom: 5px;
   vertical-align: middle;
